src/test/ui/issues/issue-54410.stderr
error[E0277]: the size for values of type `[i8]` cannot be known at compilation time
  --> $DIR/issue-54410.rs:2:28
   |
LL |     pub static mut symbol: [i8];
   |                            ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[i8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
